Added the World creation.

--- a/Plot/src/plugin.yml
+++ b/Plot/src/plugin.yml
@@ -2,3 +2,6 @@ name: Plots
 author: pongy20, marcelm19t
 version: 1.0.1
 main: de.plots.main.main
+commands:
+     create:
+          description: This Command is just for test
