fixed so much issues

--- a/Plot/src/plugin.yml
+++ b/Plot/src/plugin.yml
@@ -1,5 +1,5 @@
 name: Plots
-author: pongy20, marcelm19t
+author: pongy20, marcelm19t, greeves89
 version: 1.0.1
 main: de.plots.main.main
 commands:
